# GroveGrab-CLI

./: .gitignore  CHANGELOG.md  FIXED.md  GGCLI.html  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  RELEASE.md  SETUP_GUIDE.md  ascii-art.txt  new ascii art gg.txt  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  README.md  TROUBLESHOOTING.md
grovegrab/: __init__.py  __main__.py  ascii-art.txt  cli.py  config.py  core.py  ui.py
